credible: add missing BlobExcess struct and polish the logging